update to QueryExecutionServiceIntegrationTest to work with new async execution