@@ -1,73 +1,101 @@
 package com.test_task.jetbrains_internship_test_task.server.service;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.test_task.jetbrains_internship_test_task.entity.QueryExecutionJob;
 import com.test_task.jetbrains_internship_test_task.entity.StoredQuery;
-import com.test_task.jetbrains_internship_test_task.server.repository.StoredQueryRepository;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.jdbc.BadSqlGrammarException;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.transaction.annotation.Transactional;
-
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 @SpringBootTest
 @ActiveProfiles("test")
-@Transactional
 @DirtiesContext(classMode = DirtiesContext.ClassMode.AFTER_EACH_TEST_METHOD)
 public class QueryExecutionServiceIntegrationTest {
 
     @Autowired
-    private QueryExecutionService queryExecutionService;
+    private QueryExecutionService queryExecutionService; // Let Spring inject it
 
     @Autowired
     private StoredQueryService storedQueryService;
 
     @Autowired
-    private StoredQueryRepository storedQueryRepository;
+    private QueryExecutionJobService jobService;
 
-    @BeforeEach
-    public void setUp() {
-        storedQueryRepository.deleteAll();
+    @Autowired
+    private ObjectMapper objectMapper;
+
+    private QueryExecutionJob waitForJobCompletion(Long jobId, long timeoutSeconds) throws InterruptedException {
+        long startTime = System.currentTimeMillis();
+        while (System.currentTimeMillis() - startTime < timeoutSeconds * 1000) {
+            QueryExecutionJob job = jobService.getJobById(jobId).orElseThrow();
+            if (job.getStatus() == QueryExecutionJob.JobStatus.COMPLETED ||
+                    job.getStatus() == QueryExecutionJob.JobStatus.FAILED) {
+                return job;
+            }
+            Thread.sleep(50);
+        }
+        throw new RuntimeException("Job did not complete within " + timeoutSeconds + " seconds");
+    }
+
+    @SuppressWarnings("unchecked")
+    private List<List<Object>> parseJobResult(QueryExecutionJob job) {
+        try {
+            return objectMapper.readValue(job.getResult(), List.class);
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to parse job result", e);
+        }
     }
 
     @Test
-    public void executeQuery_SimpleSelectFromTitanic_ReturnsResults() {
-        String query = "SELECT Name, Age, Survived FROM titanic WHERE CAST(PassengerId AS INTEGER) <= 5 ORDER BY CAST(PassengerId AS INTEGER)";
+    public void executeQuery_WithSourceQueryId_ExecutesSuccessfully() throws Exception {
+        String queryText = "SELECT COUNT(*) FROM titanic";
+        StoredQuery storedQuery = storedQueryService.addQuery(queryText);
 
-        List<List<Object>> result = queryExecutionService.executeQuery(query);
+        QueryExecutionJob job = jobService.addJob(storedQuery.getId());
+        Long jobId = job.getId();
 
+        queryExecutionService.executeQuery(jobId);
+        QueryExecutionJob completedJob = waitForJobCompletion(jobId, 10);
+
+        assertEquals(QueryExecutionJob.JobStatus.COMPLETED, completedJob.getStatus());
+        assertEquals(storedQuery.getId(), completedJob.getSourceQueryId());
+
+        List<List<Object>> result = parseJobResult(completedJob);
         assertNotNull(result);
-        assertEquals(5, result.size());
+        assertEquals(1, result.size());
 
-        List<Object> firstRow = result.getFirst();
-        assertEquals(3, firstRow.size());
-        assertEquals("Braund, Mr. Owen Harris", firstRow.get(0));
-        assertEquals("22", firstRow.get(1));
-        assertEquals("0", firstRow.get(2));
+        Number count = (Number) result.getFirst().getFirst();
+        assertTrue(count.longValue() > 0);
     }
 
     @Test
-    public void executeQuery_CountSurvivors_ReturnsCorrectCount() {
-        String query = "SELECT COUNT(*) as survivor_count FROM titanic WHERE CAST(Survived AS INTEGER) = 1";
+    public void executeQuery_CountSurvivors_ReturnsCorrectCount() throws Exception {
+        String queryText = "SELECT COUNT(*) as survivor_count FROM titanic WHERE CAST(Survived AS INTEGER) = 1";
+        StoredQuery storedQuery = storedQueryService.addQuery(queryText);
+        QueryExecutionJob job = jobService.addJob(storedQuery.getId());
 
-        List<List<Object>> result = queryExecutionService.executeQuery(query);
+        queryExecutionService.executeQuery(job.getId());
+        QueryExecutionJob completedJob = waitForJobCompletion(job.getId(), 10);
+
+        assertEquals(QueryExecutionJob.JobStatus.COMPLETED, completedJob.getStatus());
+        List<List<Object>> result = parseJobResult(completedJob);
 
         assertNotNull(result);
         assertEquals(1, result.size());
         assertEquals(1, result.getFirst().size());
 
-        Long survivorCount = (Long) result.getFirst().getFirst();
-        assertTrue(survivorCount > 0);
+        Number survivorCount = (Number) result.getFirst().getFirst();
+        assertTrue(survivorCount.longValue() > 0);
     }
 
     @Test
-    public void executeQuery_SurvivalRateByClass_ReturnsAggregatedResults() {
-        String query = "SELECT CAST(Pclass AS INTEGER) as pclass, " +
+    public void executeQuery_SurvivalRateByClass_ReturnsAggregatedResults() throws Exception {
+        String queryText = "SELECT CAST(Pclass AS INTEGER) as pclass, " +
                 "COUNT(*) as total, " +
                 "SUM(CAST(Survived AS INTEGER)) as survivors, " +
                 "ROUND(SUM(CAST(Survived AS INTEGER)) * 100.0 / COUNT(*), 2) as survival_rate " +
@@ -75,7 +103,14 @@ public class QueryExecutionServiceIntegrationTest {
                 "GROUP BY Pclass " +
                 "ORDER BY CAST(Pclass AS INTEGER)";
 
-        List<List<Object>> result = queryExecutionService.executeQuery(query);
+        StoredQuery storedQuery = storedQueryService.addQuery(queryText);
+        QueryExecutionJob job = jobService.addJob(storedQuery.getId());
+
+        queryExecutionService.executeQuery(job.getId());
+        QueryExecutionJob completedJob = waitForJobCompletion(job.getId(), 10);
+
+        assertEquals(QueryExecutionJob.JobStatus.COMPLETED, completedJob.getStatus());
+        List<List<Object>> result = parseJobResult(completedJob);
 
         assertNotNull(result);
         assertFalse(result.isEmpty(), "Should return results for at least one passenger class");
@@ -88,91 +123,8 @@ public class QueryExecutionServiceIntegrationTest {
     }
 
     @Test
-    public void executeQuery_AverageFareByClassAndSurvival_ReturnsCorrectAverages() {
-        String query = "SELECT CAST(Pclass AS INTEGER) as pclass, CAST(Survived AS INTEGER) as survived, AVG(CAST(Fare AS DOUBLE)) as avg_fare " +
-                "FROM titanic " +
-                "WHERE CAST(Fare AS DOUBLE) > 0 " +
-                "GROUP BY Pclass, Survived " +
-                "ORDER BY CAST(Pclass AS INTEGER), CAST(Survived AS INTEGER)";
-
-        List<List<Object>> result = queryExecutionService.executeQuery(query);
-
-        assertNotNull(result);
-        assertTrue(result.size() >= 2);
-
-        result.forEach(row -> {
-            assertEquals(3, row.size());
-            assertInstanceOf(Number.class, row.get(0), "Pclass should be numeric");
-            assertInstanceOf(Number.class, row.get(1), "Survived should be numeric");
-            assertInstanceOf(Number.class, row.get(2), "avg_fare should be numeric");
-        });
-    }
-
-
-    @Test
-    public void executeQuery_TopExpensiveTickets_ReturnsHighestFares() {
-        String query = "SELECT Name, CAST(Pclass AS INTEGER) as pclass, CAST(Fare AS DOUBLE) as fare " +
-                "FROM titanic " +
-                "WHERE CAST(Fare AS DOUBLE) > 0 " +
-                "ORDER BY CAST(Fare AS DOUBLE) DESC " +
-                "LIMIT 5";
-
-        List<List<Object>> result = queryExecutionService.executeQuery(query);
-
-        assertNotNull(result);
-        assertEquals(5, result.size());
-
-        for (int i = 0; i < result.size() - 1; i++) {
-            Double currentFare = (Double) result.get(i).get(2);
-            Double nextFare = (Double) result.get(i + 1).get(2);
-            assertTrue(currentFare >= nextFare);
-        }
-    }
-
-    @Test
-    public void executeQuery_PassengersWithMissingAge_ReturnsNullAges() {
-        String query = "SELECT Name, Age " +
-                "FROM titanic " +
-                "WHERE Age IS NULL OR Age = '' " +
-                "LIMIT 10";
-
-        List<List<Object>> result = queryExecutionService.executeQuery(query);
-
-        assertNotNull(result);
-
-        result.forEach(row -> {
-            assertEquals(2, row.size());
-            assertNotNull(row.get(0));
-            assertTrue(row.get(1) == null || "".equals(row.get(1)));
-        });
-    }
-
-    @Test
-    public void executeQueryById_StoredTitanicQuery_ExecutesSuccessfully() {
-        String complexQuery = "SELECT CAST(Pclass AS INTEGER) as pclass, Sex, " +
-                "COUNT(*) as total, " +
-                "SUM(CAST(Survived AS INTEGER)) as survivors, " +
-                "ROUND(AVG(CAST(Fare AS DOUBLE)), 2) as avg_fare " +
-                "FROM titanic " +
-                "WHERE Age IS NOT NULL " +
-                "GROUP BY Pclass, Sex " +
-                "ORDER BY CAST(Pclass AS INTEGER), Sex";
-
-        StoredQuery storedQuery = storedQueryService.addQuery(complexQuery);
-        Long queryId = storedQuery.getId();
-
-        List<List<Object>> result = queryExecutionService.executeQueryById(queryId);
-
-        assertNotNull(result);
-        assertFalse(result.isEmpty());
-
-        List<Object> firstRow = result.getFirst();
-        assertEquals(5, firstRow.size()); // Pclass, Sex, total, survivors, avg_fare
-    }
-
-    @Test
-    public void executeQuery_ComplexJoinOnFamilySize_ReturnsFamilyAnalysis() {
-        String query = "SELECT " +
+    public void executeQuery_ComplexJoinOnFamilySize_ReturnsFamilyAnalysis() throws Exception {
+        String queryText = "SELECT " +
                 "family_size, " +
                 "COUNT(*) as passenger_count, " +
                 "SUM(survived) as survivors, " +
@@ -185,30 +137,43 @@ public class QueryExecutionServiceIntegrationTest {
                 "    FROM titanic " +
                 ") as family_data " +
                 "GROUP BY family_size " +
-                "HAVING COUNT(*) > 5 " + // Only consider family sizes with enough data
+                "HAVING COUNT(*) > 5 " +
                 "ORDER BY family_size";
 
-        List<List<Object>> result = queryExecutionService.executeQuery(query);
+        StoredQuery storedQuery = storedQueryService.addQuery(queryText);
+        QueryExecutionJob job = jobService.addJob(storedQuery.getId());
+
+        queryExecutionService.executeQuery(job.getId());
+        QueryExecutionJob completedJob = waitForJobCompletion(job.getId(), 10);
+
+        assertEquals(QueryExecutionJob.JobStatus.COMPLETED, completedJob.getStatus());
+        List<List<Object>> result = parseJobResult(completedJob);
 
         assertNotNull(result);
-
         assertFalse(result.isEmpty());
     }
 
-
     @Test
-    public void executeQuery_EmptyResult_WhenNoMatches() {
-        String query = "SELECT * FROM titanic WHERE CAST(Age AS DOUBLE) > 100";
+    public void executeQuery_EmptyResult_WhenNoMatches() throws Exception {
+        String queryText = "SELECT * FROM titanic WHERE CAST(Age AS DOUBLE) > 100";
 
-        List<List<Object>> result = queryExecutionService.executeQuery(query);
+        StoredQuery storedQuery = storedQueryService.addQuery(queryText);
+        QueryExecutionJob job = jobService.addJob(storedQuery.getId());
+
+        queryExecutionService.executeQuery(job.getId());
+        QueryExecutionJob completedJob = waitForJobCompletion(job.getId(), 10);
+
+        assertEquals(QueryExecutionJob.JobStatus.COMPLETED, completedJob.getStatus());
+        List<List<Object>> result = parseJobResult(completedJob);
 
         assertNotNull(result);
         assertTrue(result.isEmpty());
     }
 
     @Test
-    public void executeQuery_WithMultipleConditions_ReturnsFilteredResults() {
-        String query = "SELECT Name, Age, CAST(Pclass AS INTEGER) as pclass, CAST(Fare AS DOUBLE) as fare " +
+    public void executeQuery_WithMultipleConditions_ReturnsFilteredResults() throws Exception {
+        // Arrange
+        String queryText = "SELECT Name, Age, CAST(Pclass AS INTEGER) as pclass, CAST(Fare AS DOUBLE) as fare " +
                 "FROM titanic " +
                 "WHERE CAST(Survived AS INTEGER) = 1 " +
                 "AND CAST(Pclass AS INTEGER) = 1 " +
@@ -216,34 +181,100 @@ public class QueryExecutionServiceIntegrationTest {
                 "AND CAST(Fare AS DOUBLE) > 50 " +
                 "ORDER BY CAST(Fare AS DOUBLE) DESC";
 
-        List<List<Object>> result = queryExecutionService.executeQuery(query);
+        StoredQuery storedQuery = storedQueryService.addQuery(queryText);
+        QueryExecutionJob job = jobService.addJob(storedQuery.getId());
+
+        queryExecutionService.executeQuery(job.getId());
+        QueryExecutionJob completedJob = waitForJobCompletion(job.getId(), 10);
+
+        assertEquals(QueryExecutionJob.JobStatus.COMPLETED, completedJob.getStatus());
+        List<List<Object>> result = parseJobResult(completedJob);
 
         assertNotNull(result);
-        // May or may not have results depending on data
-        // Just verify no exception and proper structure
         result.forEach(row -> assertEquals(4, row.size()));
     }
 
     @Test
-    public void executeQuery_InvalidColumn_ThrowsException() {
+    public void executeQuery_InvalidColumn_FailsWithErrorMessage() throws Exception {
         String invalidQuery = "SELECT NonExistentColumn FROM titanic";
+        StoredQuery storedQuery = storedQueryService.addQuery(invalidQuery);
+        QueryExecutionJob job = jobService.addJob(storedQuery.getId());
 
-        assertThrows(BadSqlGrammarException.class,
-                () -> queryExecutionService.executeQuery(invalidQuery));
+        queryExecutionService.executeQuery(job.getId());
+        QueryExecutionJob failedJob = waitForJobCompletion(job.getId(), 10);
+
+        assertEquals(QueryExecutionJob.JobStatus.FAILED, failedJob.getStatus());
+        assertNotNull(failedJob.getErrorMessage());
+        assertTrue(failedJob.getErrorMessage().contains("NonExistentColumn") ||
+                failedJob.getErrorMessage().contains("not found"));
     }
 
     @Test
-    public void executeQuery_SyntaxError_ThrowsException() {
+    public void executeQuery_SyntaxError_FailsWithErrorMessage() throws Exception {
         String syntaxError = "SELECT FROM WHERE titanic";
+        StoredQuery storedQuery = storedQueryService.addQuery(syntaxError);
+        QueryExecutionJob job = jobService.addJob(storedQuery.getId());
 
-        assertThrows(BadSqlGrammarException.class,
-                () -> queryExecutionService.executeQuery(syntaxError));
+        queryExecutionService.executeQuery(job.getId());
+        QueryExecutionJob failedJob = waitForJobCompletion(job.getId(), 10);
+
+        assertEquals(QueryExecutionJob.JobStatus.FAILED, failedJob.getStatus());
+        assertNotNull(failedJob.getErrorMessage());
     }
 
     @Test
-    public void executeQueryById_NonExistentId_ReturnsNull() {
-        List<List<Object>> result = queryExecutionService.executeQueryById(999L);
+    public void executeQuery_ExecuteMultipleJobs() throws Exception {
+        String query1 = "SELECT COUNT(*) FROM titanic WHERE CAST(Pclass AS INTEGER) = 1";
+        String query2 = "SELECT COUNT(*) FROM titanic WHERE CAST(Pclass AS INTEGER) = 2";
 
-        assertNull(result);
+        StoredQuery storedQuery1 = storedQueryService.addQuery(query1);
+        StoredQuery storedQuery2 = storedQueryService.addQuery(query2);
+
+        QueryExecutionJob job1 = jobService.addJob(storedQuery1.getId());
+        QueryExecutionJob job2 = jobService.addJob(storedQuery2.getId());
+
+        queryExecutionService.executeQuery(job1.getId());
+        queryExecutionService.executeQuery(job2.getId());
+
+        QueryExecutionJob completedJob1 = waitForJobCompletion(job1.getId(), 10);
+        QueryExecutionJob completedJob2 = waitForJobCompletion(job2.getId(), 10);
+
+        assertEquals(QueryExecutionJob.JobStatus.COMPLETED, completedJob1.getStatus());
+        assertEquals(QueryExecutionJob.JobStatus.COMPLETED, completedJob2.getStatus());
+
+        List<List<Object>> result1 = parseJobResult(completedJob1);
+        List<List<Object>> result2 = parseJobResult(completedJob2);
+
+        assertNotNull(result1);
+        assertNotNull(result2);
+
+        Number count1 = (Number) result1.getFirst().getFirst();
+        Number count2 = (Number) result2.getFirst().getFirst();
+
+        assertTrue(count1.longValue() > 0);
+        assertTrue(count2.longValue() > 0);
+    }
+
+    @Test
+    public void executeQuery_JobLifecycle_TransitionsCorrectly() throws Exception {
+        String queryText = "SELECT 1 as test_value";
+        StoredQuery storedQuery = storedQueryService.addQuery(queryText);
+        QueryExecutionJob job = jobService.addJob(storedQuery.getId());
+
+        assertEquals(QueryExecutionJob.JobStatus.PENDING, job.getStatus());
+        assertNull(job.getResult());
+        assertNull(job.getErrorMessage());
+
+        queryExecutionService.executeQuery(job.getId());
+        QueryExecutionJob completedJob = waitForJobCompletion(job.getId(), 10);
+
+        assertEquals(QueryExecutionJob.JobStatus.COMPLETED, completedJob.getStatus());
+        assertNotNull(completedJob.getResult());
+        assertNull(completedJob.getErrorMessage());
+
+        List<List<Object>> result = parseJobResult(completedJob);
+        assertEquals(1, result.size());
+        assertEquals(1, result.getFirst().size());
+        assertEquals(1, ((Number) result.getFirst().getFirst()).intValue());
     }
 }
